# vislabs

./: .gitignore
L02-convolution-solved/: convolution.cpp
L03-background-sub-images/: Candela_m1.10_000000.pgm  Candela_m1.10_000001.pgm  Candela_m1.10_000002.pgm  Candela_m1.10_000003.pgm  Candela_m1.10_000004.pgm  Candela_m1.10_000005.pgm  Candela_m1.10_000006.pgm  Candela_m1.10_000007.pgm  Candela_m1.10_000008.pgm  Candela_m1.10_000009.pgm  Candela_m1.10_000010.pgm  Candela_m1.10_000011.pgm  Candela_m1.10_000012.pgm  Candela_m1.10_000013.pgm  Candela_m1.10_000014.pgm  Candela_m1.10_000015.pgm  Candela_m1.10_000016.pgm  Candela_m1.10_000017.pgm  Candela_m1.10_000018.pgm  Candela_m1.10_000019.pgm  Candela_m1.10_000020.pgm  Candela_m1.10_000021.pgm  Candela_m1.10_000022.pgm  Candela_m1.10_000023.pgm  Candela_m1.10_000024.pgm  Candela_m1.10_000025.pgm  Candela_m1.10_000026.pgm  Candela_m1.10_000027.pgm  Candela_m1.10_000028.pgm  Candela_m1.10_000029.pgm  Candela_m1.10_000030.pgm  Candela_m1.10_000031.pgm  Candela_m1.10_000032.pgm  Candela_m1.10_000033.pgm  Candela_m1.10_000034.pgm  Candela_m1.10_000035.pgm  Candela_m1.10_000036.pgm  Candela_m1.10_000037.pgm  Candela_m1.10_000038.pgm  Candela_m1.10_000039.pgm  (+310 more)
L03-background-sub-solved/: exprunning.cpp  prevframe.cpp  running.cpp  simple.cpp
L04-morphology-solved/: .exprunning.cpp.swp  CMakeLists.txt  exprunning.cpp
L05-edges-solved/: a1.cpp
L06-pinhole/: main.cpp  utils.h
L06-pinhole-solved/: CMakeLists.txt  main.cpp  utils.h
L10-kmeans-solved/: CMakeLists.txt  kmeans.cpp
L10-kmeans-solved/test/: CMakeCache.txt  Makefile
SIFT/: .simple.cpp.swn  .simple.cpp.swo  simple.cpp
antares/: CMakeLists.txt
esercitazione_MBDA/es_kmeans_15.12.2023/: .autotools  simple.cpp
k-means/: kmeans.cpp
simple/: CMakeLists.txt  parseopt.cpp  parseopt.h  simple.cpp
simple/test/: cmake_install.cmake
(+25 files in other folders)
